# Compiler1

./: Cargo.toml  HOME_EXAM.md
src/: ast.rs  interpreter.rs  main.rs  parser.lalrpop  typechecker.rs
src/tests/: args.txt  arithmetic.txt  booleans.txt  declarations.txt  ifelse.txt  mut_borrow_test.txt  sample.txt  square.txt  test1.txt  while.txt
