[package]
name = "Compiler1"
version = "0.1.0"
authors = ["isak8"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

[build-dependencies.lalrpop] 
version = "0.19.0"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19.0"
regex = "1.3.9"

# lalrpop = {version = "0.19.0", features = ["lexer"] }

[[bin]]
name = "comp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html